2008-09-01  Ivan N. Zlatev  <contact@i-nz.net>

	* deps/Mono.Design/patches/DesignerHost-designer-type-replacement.patch, 
	  deps/Mono.Design/patches/DesignerSerializationManager-serializer-type-replacement.patch:
	Do not mix MSNET and Mono.Design designer/serializer types.

2008-08-19  Ivan N. Zlatev  <contact@i-nz.net>

	* Make the file path textbox readonly in the New File dialog.
	[Fixes bug #417617]

2008-07-28  Ivan N. Zlatev  <contact@i-nz.net>

	* Misc fixes and improvements. 

2008-07-27  Ivan N. Zlatev  <contact@i-nz.net>

	* Add a mono-design-update build target to the Makefile to allow 
	an user to regenerate Mono.Design with upstream System.Design.

2008-07-27  Ivan N. Zlatev  <contact@i-nz.net>

	* Remove a leftover CWL. 

2008-07-27  Ivan N. Zlatev  <contact@i-nz.net>

	* Fix the creation of new files.

2008-07-24  Ivan N. Zlatev  <contact@i-nz.net>

	* DesignTime/CodeProvider.cs: Make the search for a code behind file 
	case insensitive. 

2008-07-23  Ivan N. Zlatev  <contact@i-nz.net>

	* UI/NewFileDialog.cs: Validate text entries.
	 Patch by Guillaume Simart <gsimard@gmail.com>

2008-07-21  Ivan N. Zlatev  <contact@i-nz.net>

	* Integrate Mono.Design for building with Visual Studio.

2008-07-18  Ivan N. Zlatev  <contact@i-nz.net>

	* UI/PropertyGrid.cs, UI/MainView.cs: Clear the propertygrid.

2008-06-18  Ivan N. Zlatev  <contact@i-nz.net>

	* UI/PropertyGrid.cs: Handle removing of the root component.

2008-03-11  Ivan N. Zlatev  <contact@i-nz.net>

	* DesignTime/CodeProviderDesignerLoader.cs: Guard against a NRE in 
	ReportErrors if the error collection is null. 

2008-03-02  Ivan N. Zlatev  <contact@i-nz.net>

	* Enable Undo, Redo, Cut, Copy, Paste, Delete as I've already implmented
	those in System.Design.
	* Much better code for the PropertyGrid
	* Makefile: Fixes and improvements.
	* Program.cs: Fix spacing.
	* DesignTime/CodeProviderDesignerLoader.cs: Report errors only if 
	we weren't successful.